<resources>
    <string name="app_name">Current Affairs</string>
    <string name="relatedvideo">Related Videos</string>
    <string name="select_language_note">We will remember your choice, you can change this option later through settings</string>
    <string name="hilang">Hindi</string>
    <string name="enlang">English</string>

    <string name="footer_home">Home</string>
    <string name="footer_tutorial">Tutorial</string>
    <string name="footer_result">Result</string>
    <string name="footer_settings">Settings</string>

    <string name="read">News</string>
    <string name="test">Quiz</string>
    <string name="video">Videos</string>
    <string name="more">More Apps</string>
    <string name="error_player">There was an error initializing the YouTubePlayer</string>
    <string name="banneradds">ca-app-pub-1478920275640700/9066809874</string>

    <string name="about_app">In the most of the Competitive exams some of the questions related with Latest Current affairs so we must preparation for current affairs. Using this Android app for Current Affairs you can easily preparation of Current affairs in Hindi and English language. These entire Android app for current affairs also useful for other competitive exams like as UPSC, IAS, GPSC, Staff Selection Commission, Railway Recruitment Board, IBPS Clerk &amp; PO, SBI Clerk &amp; PO etc.</string>

    </resources>
