<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.0"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/app_lightgray" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp" >

        <ImageButton
            android:id="@+id/imgBtnFooterHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/footer_home"
            android:scaleType="fitCenter"
            android:onClick="footerBtnClick"
            android:src="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/imgBtnFooterTutorial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/footer_tutorial"
            android:scaleType="fitCenter"
            android:onClick="footerBtnClick"
            android:src="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/imgBtnFooterResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/footer_result"
            android:scaleType="fitCenter"
            android:onClick="footerBtnClick"
            android:src="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/imgBtnFooterSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/footer_settings"
            android:scaleType="fitCenter"
            android:onClick="footerBtnClick"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

</LinearLayout>